# pptx-note-remover

./: MIT.LICENSE  README.md  drop_pptx_here.py  drop_pptx_here.spec  pyproject.toml  setup.py
