[tool.poetry]
name = "pptx-note-remover"
version = "0.1.0"
description = ""
authors = ["Andrew Fong <id@andrewfong.com>"]
readme = "README.md"
packages = [{include = "drop_pptx_here"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
